# Deeplus

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: change-request.yml  config.yml
.github/workflows/: canonical-integrity.yml  commit-refreshed-source-manifest.yml  refresh-source-manifest-artifact.yml  rust.yml
crates/deeplus-ast/: Cargo.toml
crates/deeplus-codegen-llvm/: Cargo.toml
crates/deeplus-diagnostics/: Cargo.toml
crates/deeplus-hir/: Cargo.toml
crates/deeplus-hir/src/: lib.rs  sfd_p1_009.rs
crates/deeplus-lexer/: Cargo.toml
crates/deeplus-lowering/: Cargo.toml
crates/deeplus-lowering/src/: lib.rs  sfd_p1_009.rs
crates/deeplus-mir/: Cargo.toml
crates/deeplus-mir/src/: lib.rs  sfd_p1_009.rs
crates/deeplus-parser/: Cargo.toml
crates/deeplus-parser/src/: lib.rs  sfd_p1_009.rs
crates/deeplus-source/: Cargo.toml
crates/deeplus-testkit/: Cargo.toml
crates/deeplus-testkit/fixtures/sfd_p1_009/: Test_Deeplus_SFD_P1_009_Diagnostic_And_Trace_Oracle_R3.json  Test_Deeplus_SFD_P1_009_Executable_Fixture_Manifest_R3.json  Test_Deeplus_SFD_P1_009_Fixture_Payload_Bundle_R1.json  Test_Deeplus_SFD_P1_009_Local_Candidate_Diagnostic_Registry_R1.json
crates/deeplus-testkit/src/: lib.rs  sfd_p1_009.rs
crates/deeplus-types/: Cargo.toml
crates/deeplus-types/src/: lib.rs  sfd_p1_009.rs
crates/deeplus-xbc/: Cargo.toml
crates/deeplus-xtask/: Cargo.toml
crates/deeplus-xvm/: Cargo.toml
crates/deeplus-xvm/src/: lib.rs  sfd_p1_009.rs
crates/deeplusc/: Cargo.toml
crates/deeplusc/src/: lib.rs  main.rs  sfd_cli.rs
crates/deeplusc/tests/: sfd_p1_009.rs
current/: authority-map.yaml  current-pointer.json  decision-index.yaml  implementation-status.yaml  language-version.toml  product-lanes.json
decisions/: README.md
decisions/language/: current-decisions.json
docs/grammar-reference/: 00-status-authority-and-notation.md  01-lexical-structure.md  02-programs-modules-and-imports.md  03-declarations-bindings-and-names.md  04-types-generics-and-refinement.md  05-functions-methods-closures-and-calls.md  06-classes-traits-conformance-and-extensions.md  07-enums-records-schemas-bitfields-and-units.md  08-expressions-and-operators.md  09-collections-indexing-and-slicing.md  10-patterns-destructuring-and-matching.md  11-control-flow-errors-effects-and-cleanup.md  12-ownership-borrowing-and-responsibility.md  13-async-tasks-actors-and-concurrency.md  14-ffi-unsafe-metaprogramming-and-profiles.md  15-preview-recovery-and-removed-surfaces.md  16-contextual-syntax-and-production-guide.md  17-name-resolution-type-inference-and-calls.md  18-evaluation-ownership-mir-and-backends.md  19-prelude-providers-diagnostics-and-conformance.md  20-preview-gated-reference.md  21-preview-design-types-objects-and-traits.md  22-preview-design-collections-context-and-control.md  23-preview-design-concurrency-ffi-and-runtime.md  24-integrated-worked-examples.md  README.md  SUMMARY.md  coverage-manifest.json
docs/guide/: design-gallery.md
docs/internals/: grammar-implementation-contract.md
examples/guide/: review-corpus.md
examples/manifests/: design-gallery.json
governance/: project-instructions.txt
governance/policies/: management-policy.yaml
governance/reports/: configuration-management.md  development-and-governance.md  project-settings-amendment.md  role-operating-model.md
governance/templates/: Design_Deeplus_ADR_Template.md  Design_Deeplus_Extra_Auditor_Assignment_Template.md  Design_Deeplus_RFC_Template.md  Design_Deeplus_Release_Auxiliary_Review_Request_Template.txt  Design_Deeplus_Release_Review_Report_Template.md  Design_Deeplus_Release_Review_Request_Design_Template.txt  Design_Deeplus_Release_Review_Request_Devel_Template.txt  (+4 more)
migration/: README.md  catalog-reassembly.json  current-document-consistency-repair-r2.3-manifest.json  import-manifest.json  m1.1-repair-manifest.json  migration-receipt.json  path-aliases.json
release/: README.md  candidate-state.json  source-tree-manifest.json
rfcs/: DP-RFC-0001-xvm-only-mir.md  DP-RFC-0002-current-hir-h1.md  README.md
spec/: language.md
spec/features/: gates.json
(+322 files in other folders)
