[package]
name = "deeplus-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-source = { path = "../deeplus-source" }
deeplus-ast = { path = "../deeplus-ast" }
deeplus-types = { path = "../deeplus-types" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }

[lints]
workspace = true
