[package]
name = "deeplus-lowering"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-hir = { path = "../deeplus-hir" }
deeplus-types = { path = "../deeplus-types" }
deeplus-mir = { path = "../deeplus-mir" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }

[lints]
workspace = true
