[package]
name = "deeplus-mir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-source = { path = "../deeplus-source" }
deeplus-types = { path = "../deeplus-types" }
deeplus-hir = { path = "../deeplus-hir" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }

[lints]
workspace = true
