[package]
name = "deeplus-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-source = { path = "../deeplus-source" }
deeplus-lexer = { path = "../deeplus-lexer" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }

[lints]
workspace = true
