[package]
name = "deeplus-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-source = { path = "../deeplus-source" }
deeplus-lexer = { path = "../deeplus-lexer" }
deeplus-parser = { path = "../deeplus-parser" }
deeplus-ast = { path = "../deeplus-ast" }
deeplus-types = { path = "../deeplus-types" }
deeplus-hir = { path = "../deeplus-hir" }
deeplus-lowering = { path = "../deeplus-lowering" }
deeplus-mir = { path = "../deeplus-mir" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }
deeplus-xbc = { path = "../deeplus-xbc" }
deeplus-xvm = { path = "../deeplus-xvm" }
base64 = { version = "=0.22.1", default-features = false, features = ["std"] }
serde = { version = "=1.0.219", default-features = false, features = ["std"] }
serde_json = { version = "=1.0.140", default-features = false, features = ["std"] }
sha2 = { version = "=0.10.8", default-features = false, features = ["std"] }

[lints]
workspace = true
