[package]
name = "deeplus-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-source = { path = "../deeplus-source" }
deeplus-ast = { path = "../deeplus-ast" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }

[lints]
workspace = true
