[package]
name = "deeplus-xvm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-xbc = { path = "../deeplus-xbc" }
deeplus-mir = { path = "../deeplus-mir" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }

[lints]
workspace = true
