[package]
name = "deeplusc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deeplus-source = { path = "../deeplus-source" }
deeplus-lexer = { path = "../deeplus-lexer" }
deeplus-parser = { path = "../deeplus-parser" }
deeplus-ast = { path = "../deeplus-ast" }
deeplus-types = { path = "../deeplus-types" }
deeplus-hir = { path = "../deeplus-hir" }
deeplus-lowering = { path = "../deeplus-lowering" }
deeplus-mir = { path = "../deeplus-mir" }
deeplus-diagnostics = { path = "../deeplus-diagnostics" }
deeplus-xbc = { path = "../deeplus-xbc" }
deeplus-xvm = { path = "../deeplus-xvm" }
deeplus-testkit = { path = "../deeplus-testkit" }

[lints]
workspace = true
